--- a/app/templates/admin/new_ai_personality.html
+++ b/app/templates/admin/new_ai_personality.html
@@ -2,7 +2,7 @@
 
 {% block title %}Create AI Personality{% endblock %}
 
-{% block content %}
+{% block admin_content %}
 <div class="container-fluid">
     <div class="row mt-4">
         <div class="col-md-12">
