--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,6 +14,9 @@
     <!-- Custom CSS -->
     <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
     {% block extra_css %}{% endblock %}
+    
+    <!-- Head block for page-specific meta tags and other head elements -->
+    {% block head %}{% endblock %}
 </head>
 <body>
     <!-- Navigation -->
